## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all jspwiki files that should be created from source files in the
# JSP_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.jspwiki

if CAN_DOCC

JSP_PAGES=root-morphology.jspwiki  \
          51-stems.jspwiki \
          abbr-stems.jspwiki \
          acro-stems.jspwiki \
          acronyms-affixes.jspwiki \
          adj-stems.jspwiki \
          adjectives-affixes.jspwiki \
          adv-affixes.jspwiki \
          adv-stems.jspwiki \
          cc-stems.jspwiki \
          cs-stems.jspwiki \
          digits-affixes.jspwiki \
          digits-stems.jspwiki \
          exceptions-stems.jspwiki \
          interj-stems.jspwiki \
          noun-stems.jspwiki \
          nouns-affixes.jspwiki \
          numeral-affixes.jspwiki \
          numeral-stems.jspwiki \
          particles-stems.jspwiki \
          pp-stems.jspwiki \
          prefixes-stems.jspwiki \
          pron-stems.jspwiki \
          propernoun-stems.jspwiki \
          punct-stems.jspwiki \
          suffixes-stems.jspwiki \
          verb-stems.jspwiki \
          verbs-affixes.jspwiki \
		  fin-phon-phonology.jspwiki 
ALLINONE_JSP_PAGE=$(GTLANG).jspwiki

LINKS=Links.jspwiki

endif # CAN_DOCC

include $(top_srcdir)/am-shared/doc-include.am
