## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all jspwiki files that should be created from source files in the
# JSP_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.jspwiki

JSP_PAGES=root-morphology.jspwiki  \
          51-stems.jspwiki \
          abbr-stems.jspwiki \
          acro-stems.jspwiki \
          acronyms-affixes.jspwiki \
          adjectives-stems.jspwiki \
          adjectives-affixes.jspwiki \
          adv-affixes.jspwiki \
          adv-stems.jspwiki \
          cc-stems.jspwiki \
          cs-stems.jspwiki \
          digits-affixes.jspwiki \
          digits-stems.jspwiki \
          exceptions-stems.jspwiki \
          interj-stems.jspwiki \
          nouns-stems.jspwiki \
          nouns-affixes.jspwiki \
          numerals-affixes.jspwiki \
          numerals-stems.jspwiki \
          particles-stems.jspwiki \
          pp-stems.jspwiki \
          prefixes-stems.jspwiki \
          pron-stems.jspwiki \
          propernouns-stems.jspwiki \
          punct-stems.jspwiki \
          suffixes-stems.jspwiki \
          verbs-stems.jspwiki \
          verbs-affixes.jspwiki \
		  fin-phon-phonology.jspwiki 
include $(top_srcdir)/am-shared/doc-dir-include.am
