## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all jspwiki files that should be created from source files in the
# JSP_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.jspwiki

JSP_PAGES=root-morphology.jspwiki  \
          determiners-stems.jspwiki \
          abbreviations-stems.jspwiki \
          abbreviations-affixes.jspwiki \
          fin-acronyms-stems.jspwiki \
          acronyms-affixes.jspwiki \
          adjectives-stems.jspwiki \
          adjectives-affixes.jspwiki \
          adv-affixes.jspwiki \
          adverbs-stems.jspwiki \
          conjunctions-stems.jspwiki \
          subjunctions-stems.jspwiki \
          digits-affixes.jspwiki \
          exceptions-stems.jspwiki \
          interj-stems.jspwiki \
          nouns-stems.jspwiki \
          nouns-affixes.jspwiki \
          numerals-affixes.jspwiki \
          numerals-stems.jspwiki \
          particles-stems.jspwiki \
          pp-stems.jspwiki \
          prefixes-stems.jspwiki \
          pron-stems.jspwiki \
          propernouns-stems.jspwiki \
          punct-stems.jspwiki \
          suffixes-stems.jspwiki \
          symbols-affixes.jspwiki \
          verbs-stems.jspwiki \
          verbs-affixes.jspwiki \
		  phonology-morphology.jspwiki 

include $(top_srcdir)/../giella-core/am-shared/doc-dir-include.am
