## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md  \
          determiners-stems.md \
          fin-abbreviations-stems.md \
          abbreviations-affixes.md \
          fin-acronyms-stems.md \
          acronyms-affixes.md \
          adjectives-stems.md \
          adjectives-affixes.md \
          adv-affixes.md \
          adverbs-stems.md \
          conjunctions-stems.md \
          subjunctions-stems.md \
          digits-affixes.md \
          exceptions-stems.md \
          interj-stems.md \
          nouns-stems.md \
          nouns-affixes.md \
          numerals-affixes.md \
          numerals-stems.md \
          particles-stems.md \
          pp-stems.md \
          prefixes-stems.md \
          pron-stems.md \
          propernouns-stems.md \
          punct-stems.md \
          suffixes-stems.md \
          symbols-affixes.md \
          verbs-stems.md \
          verbs-affixes.md \
		  transcriptor-numbers-digit2text.md \
		  phonology-morphology.md 

include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am
